<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context="com.inventory.amrdeveloper.inventory.Activity.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen3"
            android:background="@color/brown"
            android:hint="@string/product_name"
            android:padding="@dimen/dimen20"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen190"
            android:layout_marginBottom="@dimen/dimen3"
            android:scaleType="fitXY" />

        <Button
            android:id="@+id/getProductPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:onClick="getImageFromPhone"
            android:text="@string/get_photo"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/productPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen3"
            android:background="@color/brown"
            android:hint="@string/price"
            android:inputType="number"
            android:padding="@dimen/dimen20"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/productPlus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dimen3"
                android:layout_weight="1"
                android:background="@color/green"
                android:onClick="plusOneQuantity"
                android:padding="@dimen/dimen20"
                android:text="@string/plus"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/productQuantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen3"
                android:layout_weight="1"
                android:background="@color/brown"
                android:gravity="center"
                android:inputType="number"
                android:padding="@dimen/dimen20"
                android:text="0"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/productMin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/green"
                android:onClick="minOneQuantity"
                android:text="@string/min"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>

        <EditText
            android:id="@+id/productSupplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen3"
            android:background="@color/brown"
            android:hint="@string/supplier"
            android:padding="@dimen/dimen20"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/supplierPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen3"
            android:background="@color/brown"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="@dimen/dimen20"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/callSupplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:onClick="callSupplierButton"
            android:text="@string/call_supplier"
            android:textAllCaps="false"
            />
    </LinearLayout>
</ScrollView>
